syntax = "proto3";
package test3;

message Message3 {
  string value = 1;
}
